Fixed overflow problem and edited link hover in About page

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -43,9 +43,11 @@
         margin-bottom: 1em;
         a {
           color: inherit;
-          text-decoration: none;
+          text-decoration: underline;
+          text-decoration-color: rgb(0, 0, 80);
           &:hover {
             color: lighten(var.$text-color, 40%);
+            text-decoration-color: lighten(var.$text-color, 40%);
           }
         }
       }
