--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -31,7 +31,7 @@ $h-sizes: (1, 2, 3, 4, 5, 6);
 
 a {
   color: var.$text-color;
-  transition: color var.$link-transition-time;
+  transition: all var.$link-transition-time;
   &:hover {
     color: color.scale(var.$text-color, $blue: 50%, $green: 20%, $red: -30%);
   }
